[package]
name = "gremb"
description = "Calculate embeddings for graph nodes"
version = "0.0.1"
edition = "2024"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/gremb"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["cargo"] }
home = "0.5.11"
log = "0.4.27"
simplelog = "0.12.2"
